<resources>
    <string name="app_name">OS Search - VERTV</string>
    <string name="OS">Insira a OS</string>
    <string name="botaoEnviar">Enviar</string>
    <string name="servi_o_executado">Serviço Executado</string>
    <string name="contrato">Contrato:</string>
    <string name="endere_o">Endereço:</string>
    <string name="obs">Obs.:</string>
    <string name="sem_observa_o">SEM OBSERVAÇÃO</string>
    <string name="contato">CONTATO</string>
    <string name="sem_telefone_comercial">Sem Telefone Comercial</string>
    <string name="sem_telefone_residencial">Sem Telefone Residencial</string>
    <string name="sem_telefone_celular">Sem Telefone Celular</string>
    <string name="anota_es_t_cnicas">Anotações Técnicas</string>
    <string name="token_de_confirma_o">Token de Confirmação</string>
    <string name="hint_confirme_os_5_primeiros_digitos">Digite o token</string>
    <string name="enviar_os">Enviar OS</string>
    <string name="comecar_atendimento">Começar Atendimento</string>
    <string name="nome">Nome:</string>
    <string name="confirma_token">Digite o Token de Confirmação</string>
    <string name="exemploCelular">Ex.: 2299992121</string>
    <string name="textoSenha">Senha</string>
    <string name="hint_digite_sua_senha">Digite sua Senha</string>
    <string name="textoLogin">Login</string>
    <string name="label_usuario">Usuario</string>
    <string name="hint_digite_seu_usuario">Digite Seu Usuario</string>
    <string name="os">OS:</string>
    <string name="token_envio">Celular para envio de Token</string>
    <string name="solicita_token">Solicitar</string>
    <string name="msg_token_confirmacao">Informe as informações abaixo para conseguir o token de confirmação</string>
    <string name="celular_token">Numero Celular</string>
    <string name="logovertv">logoVerTV</string>
    <string name="confirmar">Confirmar</string>
    <string name="email_para_envio_de_comprovante">Email Para Envio de Comprovante</string>
    <string name="assinante_ausente">Assinante Ausente</string>
    <string name="formulario_de_aus_ncia">Formulario de Ausência</string>
    <string name="observacao">Observação</string>
    <string name="botaoEnviaAusente">Enviar</string>
    <string name="insira_a_ordem_de_servico">Insira a Ordem de Serviço</string>
    <string name="title_activity_assinatura_digital">AssinaturaDigital</string>
    <string name="concluir">concluir</string>
    <string name="limpar">LIMPAR</string>
    <string name="favor_rubrique_abaixo">Favor Rubrique Abaixo</string>
    <string name="tirar_foto">Foto do Problema</string>
    <string name="os_diaria">OS Diaria</string>
    <string name="tel_comercial">Comercial</string>
    <string name="tel_residencial">Residencial</string>
    <string name="tel_celular">Celular</string>
    <string name="title_activity_blutuf">blutuf</string>
    <string name="conectar_impressora">Conectar Impressora</string>
    <string name="desativar_impressora">Desativar Impressora</string>
    <string name="emitir_comprovante">Emitir Comprovante</string>
    <string name="impressoras_bluetooth">Impressoras Bluetooth</string>
    <string name="status_bluetooth">Status Bluetooth</string>
    <string name="dispositivo_indisponivel">Dispositivo Indisponível</string>
    <string name="continuar">continuar</string>
</resources>
