<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="match_parent"
android:background="@color/colorVertvBackgroundDark"
tools:context="com.example.shield.ossearchvertv.GetOS">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/os"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        style="@style/VertvFont"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:id="@+id/titOS"/>

    <TextView
        android:id="@+id/textViewOS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titOS"
        android:background="@color/colorVertvDetailBlack"
        style="@style/VertvFont"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingBottom="8dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/titContra"
        android:text="@string/contrato"
        android:layout_below="@id/textViewOS"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        style="@style/VertvFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewContra"
        android:layout_below="@id/titContra"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorVertvDetailBlack"
        style="@style/VertvFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/titNome"
        android:text="@string/nome"
        android:layout_below="@id/textViewContra"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        style="@style/VertvFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textViewNome"
        android:layout_below="@id/titNome"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorVertvDetailBlack"
        style="@style/VertvFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/titEndereco"
        android:text="@string/endere_o"
        android:layout_below="@id/textViewNome"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        style="@style/VertvFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewEndereco"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorVertvDetailBlack"
        style="@style/VertvFont"
        android:layout_below="@id/titEndereco"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/titObser"
        android:text="@string/obs"
        android:layout_below="@id/textViewEndereco"
        style="@style/VertvFont"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewObser"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem_observa_o"
        android:background="@color/colorVertvDetailBlack"
        style="@style/VertvFont"
        android:layout_below="@id/titObser"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorVertvDetailBlack"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:paddingBottom="8dp"
            android:id="@+id/contatoID"
            style="@style/VertvFont"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@id/textViewObser"/>

        <TextView
            android:id="@+id/textViewTelComercial"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem_telefone_comercial"
            android:layout_below="@id/contatoID"
            android:background="@color/colorVertvDetailBlack"
            style="@style/VertvFont"
            android:layout_marginBottom="@dimen/activity_vertical_margin"  />

        <TextView
            android:id="@+id/textViewTelResidencial"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem_telefone_residencial"
            android:layout_below="@id/textViewTelComercial"
            android:background="@color/colorVertvDetailBlack"
            style="@style/VertvFont"
            android:layout_marginBottom="@dimen/activity_vertical_margin"  />

        <TextView
            android:id="@+id/textViewTelCelular"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem_telefone_celular"
            android:background="@color/colorVertvDetailBlack"
            android:layout_below="@id/textViewTelResidencial"
            style="@style/VertvFont"
            android:layout_marginBottom="@dimen/activity_vertical_margin"  />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:id="@+id/botaoAvancar"
        style="@style/VertvFont"
        android:background="@color/colorVertvOrange"
        android:text="@string/comecar_atendimento"/>

</LinearLayout>

</ScrollView>