<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVertvBackgroundDark"
    android:orientation="vertical"
    tools:context="com.example.shield.ossearchvertv.TokenSender">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_nova_vertv"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/textView3"
        android:id="@+id/logoID"
        android:contentDescription="@string/logovertv"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextOS"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorVertvLetters"
        android:text="@string/msg_token_confirmacao" />


    <EditText
        android:id="@+id/editTextOS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorVertvLetters"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="258dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/OS"
        android:textColorHint="@color/colorVertvLetters"
        android:gravity="center"
        android:inputType="number" />


    <EditText
        android:id="@+id/editTextCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/celular_token"
        android:textColorHint="@color/colorVertvLetters"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="50dp"
        android:inputType="phone"
        android:textColor="@color/colorVertvLetters" />

    <Button
        android:id="@+id/buttonSolicitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextCelular"
        android:textSize="@dimen/tamanhoTextTitulo"
        android:textColor="@color/colorVertvLetters"
        android:background="@color/colorVertvOrange"
        android:text="@string/solicita_token" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonSolicitar"
        android:layout_alignRight="@id/buttonSolicitar"
        android:visibility="invisible"
        android:layout_alignEnd="@id/buttonSolicitar" />


</RelativeLayout>