<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shield.ossearchvertv.AssinaturaDigital">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/text"
        android:id="@+id/imageView1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favor_rubrique_abaixo"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/text"
        />

    <Button
        android:id="@+id/enviarID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/concluir"
        android:layout_marginRight="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        tools:ignore="ButtonStyle,RtlHardcoded"
        android:layout_alignParentStart="true"
        android:onClick="download"
        android:layout_marginEnd="200dp" />


    <Button
        android:id="@+id/limparID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="limpar"
        android:layout_marginLeft="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/limpar"
        tools:ignore="ButtonStyle,RtlHardcoded"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text"
        android:layout_above="@id/limparID"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorVertvBackgroundDark"
        >
    </LinearLayout>

</RelativeLayout>
